# cpgateway/src/apis/proxy_routes.go
@@ -83,6 +83,9 @@ var proxyRoutes = []proxyRoute{
 	{"DELETE", "/vpn_gateways/:id", "/vpn_gateways/{id}", false},
 	{"PATCH", "/vpn_gateways/:id", "/vpn_gateways/{id}", false},
 	{"GET", "/vpn_gateways/:id/traffic", "/vpn_gateways/{id}/traffic", false},
+	{"POST", "/vpn_gateways/:id/public_ips", "/vpn_gateways/{id}/public_ips", false},
+	{"GET", "/vpn_gateways/:id/public_ips/:endpoint", "/vpn_gateways/{id}/public_ips/{endpoint}", false},
+	{"DELETE", "/vpn_gateways/:id/public_ips/:endpoint", "/vpn_gateways/{id}/public_ips/{endpoint}", false},
 	{"GET", "/vpn_gateways/:id/connections", "/vpn_gateways/{id}/connections", false},
 	{"POST", "/vpn_gateways/:id/connections", "/vpn_gateways/{id}/connections", false},
 	{"GET", "/vpn_gateways/:id/connections/:conn_id", "/vpn_gateways/{id}/connections/{conn_id}", false},
